--- a/src/pages/booking/booking.html
+++ b/src/pages/booking/booking.html
@@ -9,7 +9,11 @@
 <ion-content>
  
     <ion-card>
-        <img class="header" src="http://placehold.it/500x500"/>
+
+            <img *ngIf="evento.type=='deportivo'" class="header" src="../assets/imgs/defensa.png"/>
+            <img *ngIf="evento.type=='cultural'" class="header" src="../assets/imgs/simon.png"/>
+            <img *ngIf="evento.type=='charlas'" class="header" src="../assets/imgs/mendilloo.png"/>
+            <img *ngIf="evento.type=='autoridades'" class="header" src="../assets/imgs/simon.png"/>
         <div class="card-title-container">
             <p class="card-title">{{evento.type}}</p>
         </div>
@@ -28,17 +32,23 @@
         <ion-item>
             <strong>Cupos disponibles:</strong> {{evento.beds}}
         </ion-item>
+
+  
  
         <ion-item>
             <strong>Invitados:</strong> {{details.guests}}
         </ion-item>
  
         <ion-item>
-            <strong>Costo:</strong> ${{evento.cost_per_night}}
+            <strong>Costo:</strong> BsS{{evento.cost_per_night}}
         </ion-item>
  
     </ion-list>
  
-    <button (click)="book()" full ion-button color="danger">Ir al Evento</button>
+    <button (click)="book()" full ion-button color="primary">
+        Ir al Evento</button>
+
+        <button (click)="book()" full ion-button color="danger">
+              Añadir a favoritos</button>
  
 </ion-content>
