--- a/src/pages/booking/booking.html
+++ b/src/pages/booking/booking.html
@@ -10,10 +10,10 @@
  
     <ion-card>
 
-            <img *ngIf="evento.type=='deportivo'" class="header" src="../assets/imgs/defensa.png"/>
-            <img *ngIf="evento.type=='cultural'" class="header" src="../assets/imgs/simon.png"/>
-            <img *ngIf="evento.type=='charlas'" class="header" src="../assets/imgs/mendilloo.png"/>
-            <img *ngIf="evento.type=='autoridades'" class="header" src="../assets/imgs/simon.png"/>
+        <img *ngIf="evento.type=='deportivo'" class="header" src="../assets/imgs/defensa.png"/>
+        <img *ngIf="evento.type=='cultural'" class="header" src="../assets/imgs/fotografia.png"/>
+        <img *ngIf="evento.type=='charla'" class="header" src="../assets/imgs/pupi.png"/>
+        <img *ngIf="evento.type=='autoridades'" class="header" src="../assets/imgs/unimet.jpg"/>
         <div class="card-title-container">
             <p class="card-title">{{evento.type}}</p>
         </div>
