--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 <ion-content>
 
    
- 
+
 
 
     <ion-slides>
@@ -26,7 +26,7 @@
         <p>{{slide.descripcion}}</p>
 
         <button (click)="openSearch()" ion-button full color="danger">Buscar un evento</button>
-
+        <button (click)="openScroll()" ion-button full color="danger">Buscar un evento scroll infinito</button>
 
       </ion-slide>
 
