--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -1,25 +1,30 @@
-<ion-menu [content]="content">
-    <ion-header>
-        <ion-toolbar>
-            <ion-title>Menu</ion-title>
-        </ion-toolbar>
-    </ion-header>
-    <ion-content>
-        <ion-list>
-            <button ion-item (click)="openPage(homePage)">
-        Eventos
-      </button>
-            <button ion-item (click)="openPage(SearchPage)">
-        Buscar Eventos
-      </button>
-            <button ion-item (click)="openPage(MostrarComentariosPage)">
-        Comentarios
-      </button>
-            <button ion-item (click)="closeMenu()">
-        Cerrar Menu
-      </button>
-        </ion-list>
-    </ion-content>
-</ion-menu>
+<ion-header>
+    <ion-navbar color="danger">
+        <ion-buttons right>
+            <button ion-button menuToggle>
+                        <ion-icon name="menu"></ion-icon>
+                    </button>
+        </ion-buttons>
+        <ion-title>
+            Categorias
+        </ion-title>
+    </ion-navbar>
+</ion-header>
 
-<ion-nav id="nav" #content [root]="rootPage"></ion-nav>
+<ion-content>
+    <ion-list>
+        <button ion-item (click)="verDeportivo()">
+      Deportivo
+    </button>
+        <button ion-item (click)="verCulturales()">
+            Culturales
+          </button>
+        <button ion-item (click)="verAcademicos()">
+                Academicos
+              </button>
+        <button ion-item (click)="verAutoridades()">
+                    Autoridades
+                  </button>
+    </ion-list>
+
+</ion-content>
