--- a/src/pages/mostrar-comentarios/mostrar-comentarios.html
+++ b/src/pages/mostrar-comentarios/mostrar-comentarios.html
@@ -1,5 +1,10 @@
 <ion-header>
-    <ion-navbar transparent>
+    <ion-navbar transparent color="danger">
+        <ion-buttons left>
+            <button ion-button menuToggle>
+                        <ion-icon name="menu"></ion-icon>
+                    </button>
+        </ion-buttons>
         <ion-title>
             Comentarios
         </ion-title>
