--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,7 @@
 <ion-tabs color="danger">
-    <ion-tab tabIcon="contact" [root]="tab1"></ion-tab>
-    <ion-tab tabIcon="compass" [root]="tab2"></ion-tab>
-    <ion-tab tabIcon="analytics" [root]="tab3"></ion-tab>
+    <ion-tab tabIcon="happy" [root]="tab1"></ion-tab>
+    <ion-tab tabIcon="calendar" [root]="tab4"></ion-tab>
+    <ion-tab tabIcon="flag" [root]="tab5"></ion-tab>
+
+
 </ion-tabs>
